done and deploy-test

--- a/VARIABLES.env
+++ b/VARIABLES.env
@@ -1,1 +1,1 @@
-db_cfg = 'mongodb://localhost'
+db_cfg = 'mongodb+srv://rootolimpiadas:MongoOlimpiadas@olimpiadascluster.cksbv.mongodb.net/olimpiadas?retryWrites=true&w=majority'
